# TF-Stack

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  pyqwe.toml
app/: __init__.py  config.py
app/resources/: filters.py  routes.py
app/static/: compiled.css
app/templates/: flowbite.html  index.html
tailwindcss/: _main_.css  base.css
